--- a/html/index.html
+++ b/html/index.html
@@ -23,29 +23,25 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button> -->
-                <a class="brand pull-left" href="#">
+                <a class="brand" href="#">
                   <img src="./images/logo-delegateit-gradient.png" title="DelegateIt" style="margin-top: 12px">
                 </a>
-                <div class="navbar-collapse pull-right" id="menus">
-                  <ul class="nav navbar-nav">
-                    <li>
-                      <a href="#" class="btn btn-lg btn-brand">Delegate Now</a>
-                    </li>
-                  </ul>
+                <div class="navbar-collapse" id="menus">
+                  <a href="#" class="btn btn-lg btn-brand">Delegate Now</a>
                 </div>
               </div>
             </nav>
           </header>
           <hr><br>
           <div class="row">
-            <div class="first-paragraph col-sm-7">
+            <div class="first-paragraph col-md-7">
               <h1>Need Something On Vacation?</h1>
               <p>Whether on vacation or at home send a text to this number and we will get you any item or service you might need:</p>
               <div class="header-block">
                 <span class="phone-number">512-359-3557</span>
               </div>
             </div>
-            <div class="second-paragraph col-sm-5 desktop">
+            <div class="second-paragraph col-md-5 desktop">
               <img src="./images/iphone.png" alt="">
             </div>
           </div>
@@ -66,7 +62,7 @@
             <div class="balloon">
               <p>No way.</p>
             </div>
-            <h3>Yes way! how we do it? we’re glad you asked!</h3>
+            <h3>Yes way! How do we do it? We’re glad you asked!</h3>
           </div>
         </div>
       </div>
@@ -79,33 +75,33 @@
               <img src="./images/message1.jpg" alt="">
             </div><!--
           --><div class="col-md-6 tab-text">
-          <img src="./images/giant-logo.png" class="giant-logo">
+          <img src="./images/giant-logo.png" class="giant-logo tablet">
           <div class="step-row">
             <div class="bubble">
-              <h2>1</h2>
+              <h2 class="tablet">1</h2>
               <h3>First contact</h3>
             </div>
             <p>Send a text with the details of your request</p>
           </div>
           <div class="step-row">
             <div class="bubble">
-              <h2>2</h2>
+              <h2 class="tablet">2</h2>
               <h3>Welcome</h3>
             </div>
             <p>You will receive a confirmation and quote from our team </p>
           </div>
           <div class="step-row">
             <div class="bubble">
-              <h2>3</h2>
+              <h2 class="tablet">3</h2>
               <h3>Ok, go for it!</h3>
             </div>
             <p>You approve and we send you a secure invoice via SMS.</p>
           </div>
-          <div class="text-right">
+          <div class="yellow-delegate">
             <a href="#" class="btn btn-lg btn-brand-yellow pushdown">Delegate Now</a>
           </div>
           <div class="pushdown">
-            <h3 style="font-size: 35px; line-height: 32px; margin-top:80px;">Got any Questions? Check out our FAQ Page!</h3>
+            <h3 class="got-questions">Got any Questions? Check out our FAQ Page!</h3>
           </div>
         </div>
       </div>
@@ -116,7 +112,7 @@
   <div class="aqua-box">
     <div class="container">
       <h2>delegate now</h2>
-      <div class="row">
+      <div>
         <hr>
         <div class="horizontal-center reduced-width">
           <p>DelegateIt web form is your first step to getting what you want as soon as possible. Fill out the form and we will get back to you with a texted response. We look forward to hearing from you!</p>
@@ -136,13 +132,11 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="row">
-        <a class="brand pull-left" href="#">
-          <img src="./images/gray-logo.png" title="DelegateIt" style="margin-top: 12px">
-        </a>
-        <div class="pull-right links">
-          <p>Any questions contact us at <a href="mailto:Contact@DelegateIt.co">Contact@DelegateIt.co</a></p>
-        </div>
+      <a class="brand" href="#">
+        <img src="./images/gray-logo.png" title="DelegateIt" style="margin-top: 12px">
+      </a>
+      <div class="pull-right links">
+        <p>Any questions contact us at <a href="mailto:Contact@DelegateIt.co">Contact@DelegateIt.co</a></p>
       </div>
     </div>
   </footer>
